[workspace]
resolver = "2"

members = [
    "ctor_bare",
    "ctor_bare_macros",
]

[workspace.package]
version = "0.1.0"
authors = ["Youjie Zheng <Azure_stars@126.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/ctor_bare"
repository = "https://github.com/arceos-org/ctor_bare"
keywords = ["arceos", "constructor"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]

[packages]
ctor_bare = { path = "ctor_bare" }
ctor_bare_macros = { path = "ctor_bare_macros" }