[package]
name = "constructor_array"
edition = "2021"
description = "Register constructor functions for Rust at complie time under no_std."
documentation = "https://docs.rs/constructor_array"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
constructor_array_macros = { path = "../constructor_array_macros" }